Fixed issue that was causing footer to be visible when mobile menu was open

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  z-index: 99;
+  z-index: 98;
   position: fixed;
   bottom: 0;
   display: flex;
