--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -60,7 +60,7 @@
 }
 
 .menu-icon {
-  z-index: 6;
+  z-index: 100;
   position: relative;
   height: 23px;
   width: max-content;
